--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mahmood28 <mahmoodalwatani@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
